--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ button:focus {
   fill: var(--icon-color);
   display: flex;
   gap: 10px;
+  padding-left: 345px;
 }
 
 .phone {
@@ -160,6 +161,7 @@ button:focus {
   fill: var(--icon-color);
   display: flex;
   gap: 10px;
+  padding-left: 345px;
 }
 
 .agency:hover,
