--- a/css/styles.css
+++ b/css/styles.css
@@ -230,13 +230,13 @@ address {
   letter-spacing: 0.03em;
   color: #ffffff;
   margin-left: 70px;
+  padding-top: 10px;
 }
 
 .join-us-list {
   list-style: none;
   display: inline-flex;
   justify-content: left;
-  align-items: left;
   gap: 10px;
   margin-top: 20px;
   margin-left: 70px;
@@ -635,6 +635,7 @@ address {
   border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 
 .main-portfolio {
