--- a/css/styles.css
+++ b/css/styles.css
@@ -492,13 +492,12 @@ address {
 .our-clients-list {
   list-style: none;
   display: flex;
-  justify-content: center;
-  gap: 30px;
+  justify-content: space-between;
   margin-top: 50px;
   margin-bottom: 0px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px 15px 0px 15px;
 }
 
 .our-clients-item {
@@ -625,7 +624,9 @@ address {
   border-radius: 50%;
   border: 1px solid #0000001a;
   background-color: #ffffff;
+  cursor: pointer;
 }
+
 
 @keyframes modal-in {
   0% {
