--- a/css/styles.css
+++ b/css/styles.css
@@ -275,8 +275,6 @@ address {
   line-height: 16px;
   letter-spacing: 0.03em;
   color: #ffffff;
-  margin-left: 70px;
-  padding-top: 10px;
 }
 
 .join-us-list {
@@ -285,7 +283,6 @@ address {
   justify-content: left;
   gap: 10px;
   margin-top: 20px;
-  margin-left: 70px;
   padding: 0px;
 }
 
@@ -297,13 +294,44 @@ address {
   display: block;
   justify-content: center;
   padding-top: 60px;
-  padding-left: 15px;
 }
 
 .footer-section-list {
-  display: flex;
   list-style: none;
-  padding-left: 0px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px 15px 0px 15px;
+}
+
+.newsletter {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.e-mail-input {
+  width: 358px;
+height: 50px;
+}
+
+.submit {
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
 }
 
 /*feature section*/
@@ -626,7 +654,6 @@ address {
   background-color: #ffffff;
   cursor: pointer;
 }
-
 
 @keyframes modal-in {
   0% {
