--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,7 @@ address {
 
 .e-mail-input {
   width: 358px;
-height: 50px;
+  height: 50px;
 }
 
 .submit {
@@ -611,6 +611,8 @@ height: 50px;
   display: block;
 }
 
+/*modal*/
+
 .backdrop {
   position: fixed;
   height: 100%;
@@ -653,6 +655,96 @@ height: 50px;
   border: 1px solid #0000001a;
   background-color: #ffffff;
   cursor: pointer;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.modal-header {
+  display: flex;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  justify-content: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 12px;
+}
+
+.comment {
+  width: 448px;
+  height: 120px;
+  resize: none;
+}
+
+.input-form {
+  position: relative;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-icon {
+  position: absolute;
+  
+}
+
+.label-name {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 4px;
+}
+
+.form-container {
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+
+
+.submit-btn {
+  width: 200px;
+  height: 50px;
+  padding: 10px 76px;
+  background-color: #2196f3;
+  border: none;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.sumbit-btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+.checkbox-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.checkbox-txt {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.statment-link {
+  color: #2196f3;
 }
 
 @keyframes modal-in {
