--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,6 @@ address {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
   margin-bottom: 0px;
   margin-left: 0px;
   margin-right: 0px;
@@ -313,14 +312,19 @@ address {
   line-height: 16px;
   letter-spacing: 0.03em;
   color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .e-mail-input {
   width: 358px;
   height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 
 .submit {
+  position: relative;
   width: 200px;
   height: 50px;
   background: #2196f3;
@@ -332,6 +336,29 @@ address {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.06em;
+}
+
+.submit-icon {
+  position: absolute;
+  fill: #ffffff;
+  margin-top: 13px;
+  margin-bottom: 13px;
+  margin-right: 28px;
+  right: 0;
+}
+
+.submit-label {
+  display: flex;
+  flex-direction: column;
+}
+
+.submit-field {
+  position: relative;
+  display: inline-flex;
+}
+
+.submit-txt {
+  margin-left: 42px;
 }
 
 /*feature section*/
@@ -657,7 +684,7 @@ address {
   cursor: pointer;
 }
 
-label {
+.label-modal {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -674,10 +701,13 @@ label {
   margin-bottom: 12px;
 }
 
-.comment {
-  width: 448px;
-  height: 120px;
+.textarea {
+  width: 418px;
+  height: 96px;
   resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
 }
 
 .input-form {
@@ -688,9 +718,27 @@ label {
   border-radius: 4px;
 }
 
+.input-form:hover,
+.input-form:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+.input-form:active {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+.checkbox-field:hover,
+.checkbox-field:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+
 .modal-icon {
   position: absolute;
-  
+  margin-bottom: 14px;
 }
 
 .label-name {
@@ -707,8 +755,6 @@ label {
   margin-left: 40px;
   margin-right: 40px;
 }
-
-
 
 .submit-btn {
   width: 200px;
@@ -731,6 +777,10 @@ label {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 30px;
+}
+
+.checkbox-form input {
+  appearance: none;
 }
 
 .checkbox-txt {
