--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,3 @@
-* ::before,
-::after {
-  box-sizing: border-box;
-}
-
-.section {
-  margin-bottom: var(--main-space-sections);
-}
-
-.section-2 {
-  margin-top: var(--main-space-sections);
-}
-
-body {
-  font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
-  background: var(--main-bg-color);
-  color: var(--main-txt-color);
-  margin-left: auto;
-  margin-right: auto;
-  width: 1600px;
-  margin-top: 0px;
-}
-
-.list {
-  list-style: none;
-  display: flex;
-}
-
-button:hover,
-button:focus {
-  background-color: var(--active-link-color);
-  color: #ffffff;
-  transition-duration: var(--link-transition-duration);
-  transition-timing-function: var(--link-transition-timing-function);
-  cursor: pointer;
-}
-
-.container {
-  max-width: 1200px;
-  margin: auto;
-}
-
 .header {
   border-bottom: 1px solid #ececec;
   height: 80px;
@@ -103,8 +61,7 @@ button:focus {
   text-decoration: none;
   transition-property: color;
 }
-.navigation__list-link:hover,
-.navigation__list-link:focus {
+.navigation__list-link:hover, .navigation__list-link:focus {
   color: #2196f3;
   cursor: pointer;
   fill: #2196f3;
@@ -133,8 +90,7 @@ button:focus {
   gap: 10px;
   transition-property: color, fill;
 }
-.contact-list__contact:hover,
-.contact-list__contact:focus {
+.contact-list__contact:hover, .contact-list__contact:focus {
   color: #2196f3;
   cursor: pointer;
   fill: #2196f3;
@@ -230,8 +186,7 @@ address {
   fill: #ffffff;
   transition-property: background;
 }
-.footer__icon-bg:hover,
-.footer__icon-bg:focus {
+.footer__icon-bg:hover, .footer__icon-bg:focus {
   background: #2196f3;
   cursor: pointer;
   transition-duration: 250ms;
@@ -305,12 +260,7 @@ address {
 
 .main {
   height: 600px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4) 100%,
-      rgb(47, 48, 58) 100%
-    ),
-    url("../images/img14.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4) 100%, rgb(47, 48, 58) 100%), url("../images/img14.jpg");
   background-size: contain;
   display: flex;
   justify-content: center;
@@ -459,8 +409,7 @@ address {
   width: 270px;
   height: 428px;
   text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin: 0px;
 }
@@ -498,8 +447,7 @@ address {
   fill: #afb1b8;
   transition-property: background-color, fill;
 }
-.team__icon-bg:hover,
-.team__icon-bg:focus {
+.team__icon-bg:hover, .team__icon-bg:focus {
   background-color: #2196f3;
   fill: #ffffff;
   cursor: pointer;
@@ -537,8 +485,7 @@ address {
   fill: #afb1b8;
   transition-property: border, fill;
 }
-.clients__list-item:hover,
-.clients__list-item:focus {
+.clients__list-item:hover, .clients__list-item:focus {
   border: 1px solid #2196f3;
   fill: #2196f3;
   cursor: pointer;
@@ -570,8 +517,7 @@ address {
   top: 221px;
   left: 41%;
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 .modal__x-button {
@@ -634,10 +580,7 @@ address {
   padding-left: 42px;
   transition-property: border;
 }
-.modal__input:hover,
-.modal__input:focus,
-.modal__textarea:hover,
-.modal__textarea:focus {
+.modal__input:hover, .modal__input:focus, .modal__textarea:hover, .modal__textarea:focus {
   outline: 1px solid #2196f3;
   border: 1px solid #2196f3;
   transition-duration: 250ms;
@@ -728,6 +671,216 @@ address {
 }
 .modal__statment-link {
   color: #2196f3;
-} 
+}
 
-/*# sourceMappingURL=main.css.map */
+.portfolio {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+.portfolio__button-list {
+  list-style: none;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+}
+.portfolio__button-1 {
+  width: 121px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+.portfolio__button-2 {
+  width: 93px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+.portfolio__button-3 {
+  width: 114px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+.portfolio__button-4 {
+  width: 91px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+.portfolio__button-5 {
+  width: 121px;
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+.portfolio__button-1:hover, .portfolio__button-1:focus, .portfolio__button-2:hover, .portfolio__button-2:focus, .portfolio__button-3:hover, .portfolio__button-3:focus, .portfolio__button-4:hover, .portfolio__button-4:focus, .portfolio__button-5:hover, .portfolio__button-5:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.project__table {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+}
+.project__item {
+  flex-basis: calc 80%;
+}
+.project__card {
+  position: relative;
+  width: 370px;
+  height: 404px;
+  background: #ffffff;
+  margin: 0px;
+  border: 1px solid #eeeeee;
+  transition-property: box-shadow;
+  overflow: hidden;
+}
+.project__card figcaption {
+  position: relative;
+  overflow: hidden;
+  height: 110px;
+  padding: 0;
+  margin: 0;
+  background-color: #ffffff;
+}
+.project__card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+}
+.project__card .project__card-overlay > p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding-top: 49px;
+  padding-left: 24px;
+}
+.project__card:hover, .project__card:focus, .project__card:hover .project__card-overlay {
+  cursor: pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translatey(0%);
+}
+.project__name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+}
+.project__tool {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: #757575;
+  padding: 0px;
+  margin: 0px;
+  margin-left: 24px;
+  margin-bottom: 20px;
+}
+
+* ::before,
+::after {
+  box-sizing: border-box;
+}
+
+.section {
+  margin-bottom: 94px;
+}
+
+.section-2 {
+  margin-top: 94px;
+}
+
+body {
+  font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
+  background: #ffffff;
+  color: #212121;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1600px;
+  margin-top: 0px;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+}
+
+button:hover,
+button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+}/*# sourceMappingURL=main.css.map */
